1.1 (XXX)
---------

* Changed the tree twisty triangles to the ones familiar from the
  native Mac OS X tree widget.

* The child-tab count now appears in bubbles familiar from other Mac OS X
  applications like Mail.app.

* Fixed a subtlety concerning the separator between the tab bar and
  the content window.


1.0 (2010-01-11)
----------------

Initial release.