@@ -1,0 +1,17 @@
+#statusbar-newtabbutton {
+  margin-left: -2px;  /* make it tight with the left side of the window */
+  border-left: 1px solid #868686;
+  border-right: 1px solid #868686;
+  width: 64px;
+  height: 20px;
+  list-style-image: url(chrome://browser/skin/tabbrowser/newtab.png);
+  -moz-image-region: rect(2px, 17px, 18px, 1px);
+  padding: 0 0 0 24px; /* make sure the image has space and is centered */
+}
+#statusbar-newtabbutton:hover {
+  -moz-image-region: rect(2px, 35px, 18px, 19px);
+}
+#statusbar-newtabbutton:hover:active {
+  -moz-image-region: rect(2px, 53px, 18px, 37px);
+  background-color: -moz-mac-chrome-active;
+}
